# Birthday-Reminder

./: .gitignore  README.md  birthdays.cmd  main.py  pyproject.toml
