[project]
name = "birthday-reminder"
version = "0.0.1"
description = "Your private birthday reminder :D"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=3.0.2",
    "windows-curses>=2.4.2",
]

[project.scripts]
birthdays = "main:main"
bds = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["main.py"]